fix overlapping text in AboutMe

--- a/src/components/Main/AboutMe/AboutMe.scss
+++ b/src/components/Main/AboutMe/AboutMe.scss
@@ -31,20 +31,32 @@
   }
 
   &__image {
-    align-self: center;
-
     max-width: 270px;
     max-height: 327px;
 
     border-radius: 10px;
+
+    @media screen and (max-width: $breakpoint-mobile) {
+      align-self: center;
+    }
   }
 
   &__student {
-    position: relative;
+    max-width: 600px;
+
     display: flex;
     flex-direction: column;
-    gap: 26px;
-    max-width: 600px;
+    justify-content: space-between;
+
+    row-gap: 40px;
+
+    &-article {
+      display: flex;
+      flex-direction: column;
+
+      gap: 26px;
+      max-width: 600px;
+    }
   }
 
   &__heading {
@@ -65,16 +77,17 @@
 
     font-size: $default-font-size-texts;
     line-height: 157%;
+
+    @media screen and (max-width: $breakpoint-tablet) {
+      font-size: 12px;
+      line-height: 150%;
+    }
   }
 
   &__links {
     @include default-gap-small;
 
     display: flex;
-
-    position: absolute;
-    bottom: 0;
-    left: 0;
   }
 
   &__link {
